登陆页文字折行

--- a/html/login.html
+++ b/html/login.html
@@ -195,8 +195,8 @@
 				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
 				<li data-role="fieldcontain" data-type="horizontal" >
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
-						<strong>帐&#160;&#160;&#160;&#160;号:</strong>
+						<tr><td style="min-width:56px">
+						<strong>用户名:</strong>
 						</td><td>
 						<input type="text" name="username" style="outline:none;width:100%;border:0;background:transparent;" id="username" value="" onfocus ="clearData()" onblur="showTips()"/>
 						</td></tr>
@@ -204,7 +204,7 @@
 				</li>
 				<li data-role="fieldcontain">
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
+						<tr><td style="min-width:56px">
 						<strong>密&#160;&#160;&#160;&#160;码:</strong>
 						</td><td>
 						<input type="password" name="password" style="outline:none;width:100%;border:0;background:transparent;" id="password" value=""/>
@@ -213,7 +213,7 @@
 				</li>
 				<li data-role="fieldcontain">
 					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td>
+						<tr><td style="min-width:56px">
 						<strong>验证码:</strong>
 						</td><td>
 						<input type="text" name="imageCode" id="imageCode" style="width:80px;"/>
