修复公文查阅下拉框文字显示不全问题

--- a/html/queryList.html
+++ b/html/queryList.html
@@ -347,7 +347,7 @@
 				    </ul>
 		      	</div>
 				<div id="queryselect" align="center" class="ui-grid-b">
-						<div class="ui-block-a">
+						<div class="ui-block-a" style="min-width:10em">
 							<select name="querytype" id="querytype" onChange="queryListForType(this.value)" data-theme="a"  data-native-menu="true">
 							<option value="vwDocByDate">办理中</option>
 							<option value="vwtoArchive">待归档</option>
@@ -360,7 +360,7 @@
 				<div id="signselect" align="center" class="ui-grid-b" style="display:none">
 						<div class="ui-block-a"></div>
 						<div class="ui-block-b"></div>
-						<div class="ui-block-c">
+						<div class="ui-block-c" style="min-width:10em">
 							<select name="signtype" id="signtype" onChange="signListForType(this.value)" data-theme="a"  data-native-menu="true">
 								<option value="doing">办理中</option>
 								<option value="todo">待归档</option>
