--- a/html/home2.html
+++ b/html/home2.html
@@ -6,8 +6,7 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 <link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<link rel="stylesheet" href="../lib/swiper/idangerous.swiper.css">
-<link rel="stylesheet" href="../lib/app/home/css/news.css">
+<link rel="stylesheet" href="../lib/app/home/css/home.css">
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/jquery-cookie/jquery.cookie.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -16,10 +15,9 @@
 <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
-<script src="../lib/swiper/idangerous.swiper.min.js"></script>
 <script src="../lib/app/home/app.js"></script>
 <script src="../config/web/config.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	var currentUser = "";
 	$(document).ready(function() {
 		try {
@@ -219,7 +217,7 @@
 		var viewModel = ko.mapping.fromJS(data);
 		ko.applyBindings(viewModel, document.getElementById("divOne"));
 	}
-</script>
+</script> -->
 <style>
 .divxs {
 	width: 33.333%;
