--- a/html/home2.html
+++ b/html/home2.html
@@ -221,9 +221,10 @@
 <style>
 .divxs {
 	width: 33.333%;
-	margin-top: 20px
+	margin-top: 15px
 }
-/*  @media  only screen and (min-width: 1070px) and (max-width: 1081px) {
+.ui-content{padding:5px;}
+/*  @media  only screen and (min-width: 1070px) and (max-width: 1242px) {
   .imgToDo {
     width:10em;
   }
