* 添加新闻列表页标题判断逻辑

--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -161,6 +161,7 @@ a {
 		function loadSrlrqs2(title, seriesname2, seriesdata2, category2,
 				serieschart, year, month) {
 			var option = {
+				animation:false,
 				tooltip : {
 					trigger : 'axis'
 				},
