--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -178,6 +178,7 @@ ss.style.width=w+"px";
 	<script type="text/javascript">
 		function loadSrlrqs2(month2,seriesname2,lastSumData2,nowSumData2,increaseData2,yearBudget2) {
 			var option = {
+				animation:false,
 				tooltip : {
 					trigger : 'axis'
 				},
