--- a/html/jtxwz.html
+++ b/html/jtxwz.html
@@ -43,8 +43,7 @@
 	}
 	</script>
 <body>
-	<div data-role="page" id="home"
-		style="background: url(../assets/home/bg_empty.jpg); -moz-background-size: cover; background-repeat: repeat;">
+	<div data-role="page" id="home">
 		<div data-role="content" align="center">
 			
 			<div class="ui-grid-b" id="divOne">
