--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -53,7 +53,7 @@
 		try {
 			hori.setHeaderTitle("安全生产");
 			/*隐藏后退按钮*/
-			hori.hideBackBtn();
+			//hori.hideBackBtn();
 		} catch (e) {
 			alert(e.message);
 		}
