--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -26,14 +26,14 @@ a {
 </head>
 <body>
 	<!-- 收入完成 -->
-	<div style="float:right;">
+	</div>
+	<div id="main" style="height: 400px; padding-top: 50px; padding-bottom: 10px;">
+	
+	</div>
+	<div style="float:left; margin-left: 50px;">
 	<div id="yusuan" align="left" style="font-size:1.3em;"></div>
 	<div id="leiji" align="left" style="font-size:1.3em;"></div>
 	<div id="bili" align="left" style="font-size:1.3em;"></div>
-	</div>
-	<div id="main" style="height: 400px; padding-top: 50px;">
-	
-	</div>
 	<script src="../asset/js/echarts-plain-original.js"></script>
 	<script type="text/javascript" src="../asset/js/echartsHome.js"></script>
 	<script src="../asset/js/bootstrap.min.js"></script>
@@ -110,7 +110,7 @@ a {
 					max:ww,
 					axisLine : { // 坐标轴线
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : [ [ colorOne, '#FFD700' ], [ colorTwo, '#7CFC00' ],
+							color : [ [ colorOne, '#FFCC66' ], [ colorTwo, '#3399ff' ],
 									[ 1, '#A066D3' ] ],
 							width : 50
 						}
@@ -125,7 +125,7 @@ a {
 					},
 					axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
 						textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-							color : '#ffffff'
+							color : '#FFFFFF'
 						}
 					},
 					splitLine : { // 分隔线
@@ -140,8 +140,8 @@ a {
 						width : 5
 					},
 					title : {
-						show : true,
-						margin:200, 
+						show : false,
+						margin:20, 
 						offsetCenter : [ 0, '-40%' ], // x, y，单位px
 						textStyle : { // 其余属性默认使用全局文本样式，详见TEXTSTYLE
 							fontWeight : 'bolder'
