--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,8 @@
 	</style>
 	<script type="text/javascript">
 		$(document).ready(function(){
+			//获取验证码
+			getCaptcha();
 			if(localStorage.getItem("data-saveusername")=="true"){
 				var username=localStorage.getItem("username");
 				if(username==null){
@@ -44,6 +46,10 @@
 			//注销登录
 			loginout();
 		});
+		
+		function getCaptcha(){
+			$("#captcha").attr("src",$.hori.getconfig().appServerHost + "/servlet/captcha");
+		}
 		function clearData (){
 			if($.trim($("#username").val())=="用户名/itcode"){
 				$("#username").val("");
@@ -65,6 +71,8 @@
 			return false;
 		}
 		function login(){
+// 			$.hori.loadPage($.hori.getconfig().serverBaseUrl+"viewhome/html/home2.html", "viewhome/xml/digihome.xml");
+// 			return;
 			var username = $.trim($("#username").val());
 			var password = $("#password").val();
 			if(username == ""){
@@ -101,7 +109,6 @@
 						if(localStorage.getItem("loginRedirectUrl")!=null){
 							targetURL=localStorage.getItem("loginRedirectUrl");
 							localStorage.removeItem("loginRedirectUrl");
-							
 						}else{
 							componentURL = "viewhome/xml/digihome.xml";
 						}
@@ -221,9 +228,9 @@
 						</td><td>
 						<input type="text" name="imageCode" id="imageCode" style="width:80px;"/>
 						</td>
-						<td>
+						<td style="text-align: right;">
 						<!-- <a data-role="button" data-theme="f" data-mini="true" onclick="">1234</a> -->
-						<img src="../assets/login/rdcode.jpg" style="width: 100px;margin-left: 10px;">
+						<img id="captcha" onclick="getCaptcha();" style="width: 100px;margin-left: 10px;text-align: right;">
 						</td></tr>
 					</table>
 				</li>
