--- a/html/guide.html
+++ b/html/guide.html
@@ -1,115 +1,190 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-	<title>首次登录向导</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
-	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
-	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
-	<script src="../lib/jquery/jquery.min.js"></script>		
-	<script src="../lib/jquery-cookie/jquery.cookie.js"></script>	
-	<script src="../lib/encrypt/encrypt.js"></script>
-	<script src="../lib/json/json2.js"></script>
-	<script src="../lib/hori/hori.js?tag=21369"></script>
-	<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
-	<script src="../config/web/config.js"></script>
-	<style>
-		a{text-decoration:none;}
-		div p{margin:4px 15px}
-	</style>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			var hori=$.hori;
-			try{
-				hori.setHeaderTitle("首次登录向导");
-				/*隐藏后退按钮*/
-				//hori.hideBackBtn();
-			}catch(e){
-				alert(e.message);
-			}
-		});
-		
-		function seach(){
-			var username = $.trim($("#username").val());
-			var number = $("#number").val();
-			if(username == ""){
-				alert("请输入用户名!");
-				return;
-			}
-			if(number == ""){
-				alert("请输入身份证号!");
-				return;
-			}
-			$.hori.showLoading();
-			try{
-				var random = new Date().getTime();
-				var url=$.hori.getconfig().appServerHost+"view/oa/loginvalidate/pkmslogin.form";
-				url = url + "?data-random="+random;
-			}catch(e){}
-			var data="username="+username+"&password="+password+"&login-form-type=pwd&data-userid="+username+"&data-password=Password&data-login=true";
-			$.hori.ajax({
-				"type":"post",
-				"url":url,
-				"data":data,
-				"success":function(res){
-					var json = JSON.parse(res);
-					
-				},
-				"error":function(res){
-					alert(res+"222");
-					$.hori.hideLoading();
-				}
-			})
+<title>首次登录向导</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
+<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" />
+<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
+<script src="../lib/jquery/jquery.min.js"></script>
+<script src="../lib/jquery-cookie/jquery.cookie.js"></script>
+<script src="../lib/encrypt/encrypt.js"></script>
+<script src="../lib/json/json2.js"></script>
+<script src="../lib/hori/hori.js?tag=21369"></script>
+<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../config/web/config.js"></script>
+<style>
+a {
+	text-decoration: none;
+}
+
+div p {
+	margin: 4px 15px
+}
+</style>
+<script type="text/javascript">
+	$(document).ready(function() {
+		var hori = $.hori;
+		try {
+			hori.setHeaderTitle("首次登录向导");
+		} catch (e) {
+			alert(e.message);
 		}
-		
-	</script>
+	});
+
+	//查询用户信息方法
+	function doSearch() {
+		var username = $.trim($("#cn_name").val());
+		var number = $("#id_number").val();
+		if (username == "") {
+			alert("请输入姓名!");
+			return;
+		}
+		if (number == "") {
+			alert("请输入身份证号!");
+			return;
+		}
+		$.hori.showLoading();
+		try {
+			var random = new Date().getTime();
+			var url = $.hori.getconfig().appServerHost
+					+ "view/guide/getInfo";
+			url = url + "?data-random=" + random + "&data-result=text";
+		} catch (e) {
+		}
+		$.hori.ajax({
+			"type" : "post",
+			"url" : url,
+			"data" : $("#guideQueryForm").serialize(),
+			"success" : function(res) {
+				console.log(res);
+				var data = JSON.parse(res);
+				if (data.rtn_code && data.rtn_code == "2000") { //判断是否正确返回 
+					//TODO
+				} else { //未正确查询到结果
+					alert(data.rtn_msg);
+				}
+			},
+			"error" : function(res) {
+				alert("查询失败：" + res);
+				$.hori.hideLoading();
+			}
+		})
+	}
+
+	//添加手机号码
+	function addMobileNum() {
+		var cn_name = $.trim($("#cn_name").val());
+		var id_number = $("#id_number").val();
+		var mobile_number = $("#mobile_number").val();
+		if (cn_name == "") {
+			alert("请输入姓名!");
+			return;
+		}
+		if (id_number == "") {
+			alert("请输入身份证号!");
+			return;
+		}
+		if (mobile_number == "") {
+			alert("请输入手机号!");
+			return;
+		}
+		$.hori.showLoading();
+		try {
+			var random = new Date().getTime();
+			var url = $.hori.getconfig().appServerHost
+					+ "view/guide/updateMo/updateMobile";
+			url = url + "?data-random=" + random + "&data-result=text";
+		} catch (e) {
+		}
+		$.hori.ajax({
+			"type" : "post",
+			"url" : url,
+			"data" : $("#guideQueryForm").serialize(),
+			"success" : function(res) {
+				console.log(res);
+				var data = JSON.parse(res);
+				if (data.rtn_code && data.rtn_code == "2000") { //判断是否正确返回 
+				} else { //未正确查询到结果
+					alert(data.rtn_msg);
+				}
+			},
+			"error" : function(res) {
+				alert("查询失败：" + res);
+				$.hori.hideLoading();
+			}
+		})
+	}
+</script>
 </head>
 <body>
 	<!-- 登录页面 -->
 	<div data-role="page" id="login" class="login">
-		<div data-role="content" align="center" style="padding:0.5em">
-			<ul id="viewBody" data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
-				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
-				<li data-role="fieldcontain" data-type="horizontal" >
-					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td style="min-width:5em">
-						<strong>姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</strong>
-						</td><td>
-						<input type="text" name="username" style="outline:none;width:100%;border:0;background:transparent;" id="username" value="" onfocus ="clearData()" onblur="showTips()"/>
-						</td></tr>
-					</table>
-				</li>
-				<li data-role="fieldcontain">
-					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td style="min-width:5em">
-						<strong>身份证号:</strong>
-						</td><td>
-						<input type="text" name="number" style="outline:none;width:100%;border:0;background:transparent;" id="number" value=""/>
-						</td></tr>
-					</table>
-				</li>
-		</ul>
-			<div class="ui-grid-a" style="max-width:400px;">
-					<a href="javascript:void(0)"  onclick="seach()" data-theme="f" data-role="button" data-icon="false">查&nbsp;询</a>
-				</div>
-			<div  style="max-width:400px;text-align:left;" >
-				<p>您的集团统一用户账号是：ＡＡＢＢＦＤＫＦ，请使用对应的密码登陆，如无法登陆，请点击<a>忘记密码</a>重置</p>
-				<p>您当前的手机号为：189****8846</p><p>如需更改手机号，请与本单位人力资源部联系</p>
+		<div data-role="content" align="center" style="padding: 0.5em">
+			<form id="guideQueryForm">
+				<ul id="viewBody" data-role="listview" data-theme="c"
+					data-inset="true" style="max-width: 400px;">
+					<li data-role="list-divider"><a href="javascript:void(0);"
+						data-theme="f"></a></li>
+					<li data-role="fieldcontain" data-type="horizontal">
+						<table style="width: 100%" cellspaceing="0" cellpadding="0"
+							border="0">
+							<tr>
+								<td style="min-width: 5em"><strong>姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</strong>
+								</td>
+								<td><input type="text" name="cn_name"
+									style="outline: none; width: 100%; border: 0; background: transparent;"
+									id="cn_name" value="" /></td>
+							</tr>
+						</table>
+					</li>
+					<li data-role="fieldcontain">
+						<table style="width: 100%" cellspaceing="0" cellpadding="0"
+							border="0">
+							<tr>
+								<td style="min-width: 5em"><strong>身份证号:</strong></td>
+								<td><input type="text" name="id_number"
+									style="outline: none; width: 100%; border: 0; background: transparent;"
+									id="id_number" value="" /></td>
+							</tr>
+						</table>
+					</li>
+				</ul>
+				</form>
+			<div class="ui-grid-a" style="max-width: 400px;">
+				<a href="javascript:void(0)" onclick="doSearch();" data-theme="f"
+					data-role="button" data-icon="false">查&nbsp;询</a>
 			</div>
-			<ul data-role="listview" data-theme="c" data-inset="true" style="max-width:400px;" >
-				<li data-role="list-divider" ><a href="javascript:void(0);" data-theme="f" ></a></li>
-				<li data-role="fieldcontain" data-type="horizontal" >
-					<table style="width:100%" cellspaceing="0" cellpadding="0" border="0">
-						<tr><td style="min-width:5em">
-						<strong>手机号码:</strong>
-						</td><td>
-						<input type="text" name="phoneNumber" style="outline:none;width:100%;border:0;background:transparent;" id="phoneNumber" value=""/>
-						</td></tr>
+			<div style="max-width: 400px; text-align: left;">
+				<p>
+					您的集团统一用户账号是：ＡＡＢＢＦＤＫＦ，请使用对应的密码登陆，如无法登陆，请点击<a>忘记密码</a>重置
+				</p>
+				<p>您当前的手机号为：189****8846</p>
+				<p>如需更改手机号，请与本单位人力资源部联系</p>
+			</div>
+			<ul data-role="listview" data-theme="c" data-inset="true"
+				style="max-width: 400px;">
+				<li data-role="list-divider"><a href="javascript:void(0);"
+					data-theme="f"></a></li>
+				<li data-role="fieldcontain" data-type="horizontal">
+					<table style="width: 100%" cellspaceing="0" cellpadding="0"
+						border="0">
+						<tr>
+							<td style="min-width: 5em"><strong>手机号码:</strong></td>
+							<td><input type="text" name="mobile_number"
+								style="outline: none; width: 100%; border: 0; background: transparent;"
+								id="mobile_number" value="" /></td>
+						</tr>
 					</table>
 				</li>
 			</ul>
-				
+			<div class="ui-grid-a" style="max-width: 400px;">
+				<a href="javascript:void(0)" onclick="addMobileNum();"
+					data-theme="f" data-role="button" data-icon="false">添加手机号</a>
+			</div>
+			
 		</div>
 	</div>
-</body>21
+</body>
 </html>
