--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> 收入利润趋势 </title>
+<title>收入利润趋势</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
-	<link
-	href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
-	rel="stylesheet">
 <link rel="stylesheet"
 	href="../../lib/jquery-mobile/jquery.mobile.min.css" />
 <script src="../../lib/jquery/jquery.min.js"></script>
@@ -16,6 +13,7 @@
 <script src="../../lib/json/json2.js"></script>
 <script src="../../lib/hori/hori.js?tag=21369"></script>
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
+<script src="../asset/js/echarts-plain-original.js"></script>
 <script src="../../config/web/config.js"></script>
 <style>
 a {
@@ -25,83 +23,80 @@ a {
 </head>
 <body>
 	<!-- 收入利润趋势 -->
-	<div id="main" >
-	</div>
-	<div id="main1">
-	</div>
-	<script src="../asset/js/echarts-plain-original.js"></script>
-	<script type="text/javascript" src="../asset/js/echartsHome.js"></script>
-	<script src="../asset/js/bootstrap.min.js"></script>
-	<script src="../asset/js/echartsExample.js"></script>
-	
-<script type="text/javascript">
-window.onload=function()
-{
-var h=document.documentElement.clientHeight/2;//可见区域高度
-var w=document.documentElement.clientWidth;//可见区域高度
-var sm=document.getElementById('main');
-sm.style.height=h+"px";
-sm.style.width=w+"px";
-var ss=document.getElementById('main1');
-ss.style.height=h+"px";
-ss.style.width=w+"px";
+	<div id="main"></div>
+	<div id="main1"></div>
 
-}
 
-	$(document).ready(function(){
-		$.hori.setHeaderTitle("收入利润趋势");
+	<script type="text/javascript">
+		window.onload = function() {
+			var h = document.documentElement.clientHeight / 2;//可见区域高度
+			var w = document.documentElement.clientWidth;//可见区域高度
+			var sm = document.getElementById('main');
+			sm.style.height = h + "px";
+			sm.style.width = w + "px";
+			var ss = document.getElementById('main1');
+			ss.style.height = h + "px";
+			ss.style.width = w + "px";
+
+		}
+
+		$(document).ready(function() {
+			$.hori.setHeaderTitle("收入利润趋势");
+			//加载收入利润趋势图表数据
+			loadSrlrqsChart()
+		});
 		//加载收入利润趋势图表数据
-		loadSrlrqsChart()
-	});
-	//加载收入利润趋势图表数据
-	function loadSrlrqsChart(){
-            var url = $.hori.getconfig().appServerHost+"view/bi/loadSrlrqsChart/accsyBiReport/services/reqBiReportData";
-            var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;6$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
-            var soap ="<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
-                soap+='<soapenv:Header/><soapenv:Body>';
-                soap+='<web:viewReportById>';
-                soap+='<web:in0>'+temp+'</web:in0>';
-                soap+='</web:viewReportById>';
-                soap+=' </soapenv:Body></soapenv:Envelope>';
-            var data = "data-xml="+soap;
-            
-            $.hori.ajax({
-                "type":"post",
-                "url":url,
-                "data":data,
-                "success":function(res){
-                	
-                	var json=JSON.parse(res);
-                	console.log(res);
-                	var income  = json.reportdata.income;
-                	var profit = json.reportdata.profit;
-                	var month= income.statMonth.split('|');
-                	var seriesname = income.seriesname.split('|');
-                	var lastSumData = income.lastSumData.split('|');
-                	var nowSumData = income.nowSumData.split('|');
-                	var increaseData = income.increaseData.split('|');
-                	var yearBudget = income.yearBudget.split('|');
-                	loadSrlrqs(month,seriesname,lastSumData,nowSumData,increaseData,yearBudget);
-                	var month2= income.statMonth.split('|');
-                	var seriesname2 = profit.seriesname.split('|');
-                	var lastSumData2 = profit.lastSumData.split('|');
-                	var nowSumData2 = profit.nowSumData.split('|');
-                	var increaseData2 = profit.increaseData.split('|');
-                	var yearBudget2 = profit.yearBudget.split('|');
-                loadSrlrqs2(month2,seriesname2,lastSumData2,nowSumData2,increaseData2,yearBudget2); 
-                },
-                "error":function(res){
-                    alert("error:" + res);
-                    $.hori.hideLoading();
-                }
-            });
-    }
-	
+		function loadSrlrqsChart() {
+			var url = $.hori.getconfig().appServerHost
+					+ "view/bi/loadSrlrqsChart/accsyBiReport/services/reqBiReportData";
+			var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;6$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
+			var soap = "<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
+			soap += '<soapenv:Header/><soapenv:Body>';
+			soap += '<web:viewReportById>';
+			soap += '<web:in0>' + temp + '</web:in0>';
+			soap += '</web:viewReportById>';
+			soap += ' </soapenv:Body></soapenv:Envelope>';
+			var data = "data-xml=" + soap;
+
+			$.hori.ajax({
+				"type" : "post",
+				"url" : url,
+				"data" : data,
+				"success" : function(res) {
+
+					var json = JSON.parse(res);
+					console.log(res);
+					var income = json.reportdata.income;
+					var profit = json.reportdata.profit;
+					var month = income.statMonth.split('|');
+					var seriesname = income.seriesname.split('|');
+					var lastSumData = income.lastSumData.split('|');
+					var nowSumData = income.nowSumData.split('|');
+					var increaseData = income.increaseData.split('|');
+					var yearBudget = income.yearBudget.split('|');
+					loadSrlrqs(month, seriesname, lastSumData, nowSumData,
+							increaseData, yearBudget);
+					var month2 = income.statMonth.split('|');
+					var seriesname2 = profit.seriesname.split('|');
+					var lastSumData2 = profit.lastSumData.split('|');
+					var nowSumData2 = profit.nowSumData.split('|');
+					var increaseData2 = profit.increaseData.split('|');
+					var yearBudget2 = profit.yearBudget.split('|');
+					loadSrlrqs2(month2, seriesname2, lastSumData2, nowSumData2,
+							increaseData2, yearBudget2);
+				},
+				"error" : function(res) {
+					alert("error:" + res);
+					$.hori.hideLoading();
+				}
+			});
+		}
 	</script>
 	<script type="text/javascript">
-		function loadSrlrqs(month,seriesname,lastSumData,nowSumData,increaseData,yearBudget) {
+		function loadSrlrqs(month, seriesname, lastSumData, nowSumData,
+				increaseData, yearBudget) {
 			var option = {
-				animation:false,
+				animation : false,
 				tooltip : {
 					trigger : 'axis'
 				},
@@ -148,37 +143,35 @@ ss.style.width=w+"px";
 				} ],
 				series : [
 
-						{
-							name : seriesname[0],
-							type : 'bar',
-							data : lastSumData
-						},
-						{
-							name : seriesname[1],
-							type : 'bar',
-							data : nowSumData
-						},
-						{
-							name : seriesname[2],
-							type : 'line',
-							yAxisIndex : 1,
-							data : increaseData
-						},
-						{
-							name : seriesname[3],
-							type : 'line',
-							yAxisIndex : 1,
-							data : yearBudget
-						}  ]
+				{
+					name : seriesname[0],
+					type : 'bar',
+					data : lastSumData
+				}, {
+					name : seriesname[1],
+					type : 'bar',
+					data : nowSumData
+				}, {
+					name : seriesname[2],
+					type : 'line',
+					yAxisIndex : 1,
+					data : increaseData
+				}, {
+					name : seriesname[3],
+					type : 'line',
+					yAxisIndex : 1,
+					data : yearBudget
+				} ]
 			};
 			var myChart = echarts.init(document.getElementById('main'));
 			myChart.setOption(option);
 		}
 	</script>
 	<script type="text/javascript">
-		function loadSrlrqs2(month2,seriesname2,lastSumData2,nowSumData2,increaseData2,yearBudget2) {
+		function loadSrlrqs2(month2, seriesname2, lastSumData2, nowSumData2,
+				increaseData2, yearBudget2) {
 			var option = {
-				animation:false,
+				animation : false,
 				tooltip : {
 					trigger : 'axis'
 				},
@@ -225,28 +218,25 @@ ss.style.width=w+"px";
 				} ],
 				series : [
 
-						{
-							name : seriesname2[0],
-							type : 'bar',
-							data : lastSumData2
-						},
-						{
-							name : seriesname2[1],
-							type : 'bar',
-							data : nowSumData2
-						},
-						{
-							name : seriesname2[2],
-							type : 'line',
-							yAxisIndex : 1,
-							data : increaseData2
-						},
-						{
-							name : seriesname2[3],
-							type : 'line',
-							yAxisIndex : 1,
-							data : yearBudget2
-						}  ]
+				{
+					name : seriesname2[0],
+					type : 'bar',
+					data : lastSumData2
+				}, {
+					name : seriesname2[1],
+					type : 'bar',
+					data : nowSumData2
+				}, {
+					name : seriesname2[2],
+					type : 'line',
+					yAxisIndex : 1,
+					data : increaseData2
+				}, {
+					name : seriesname2[3],
+					type : 'line',
+					yAxisIndex : 1,
+					data : yearBudget2
+				} ]
 			};
 			var myChart = echarts.init(document.getElementById('main1'));
 			myChart.setOption(option);
