--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -20,7 +20,7 @@ a {
 	text-decoration: none;
 }
 
-#xianshi {
+#light_wall {
 	padding: 0px;
 	margin-left: 0px;
 	float: left;
@@ -148,7 +148,7 @@ a {
 							imgString = imgString + "</li>";
 						}
 						imgString = imgString + "</ul>";
-						document.getElementById("xianshi").innerHTML = imgString;
+						document.getElementById("light_wall").innerHTML = imgString;
 						//显示顶部年份
 						changeTipYearPosition();
 					},
@@ -174,6 +174,6 @@ a {
 </head>
 <body>
 	<!-- 风险状况 -->
-	<div id="xianshi"></div>
+	<div id="light_wall"></div>
 </body>
 </html>
