--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -21,52 +21,55 @@ a {
 }
 </style>
 <script type="text/javascript">
-
-	$(document).ready(function(){
+	$(document).ready(function() {
 		$.hori.setHeaderTitle("经营态势");
 		//加载收入完成图表数据
 		loadSrwcChart();
 	});
-	
+
 	//加载收入完成图表数据
-	function loadSrwcChart(){
-            var url = $.hori.getconfig().appServerHost+"view/bi/loadJytsChart/accsyBiReport/services/reqBiReportData";
-            var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;1$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
-            var soap ="<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
-                soap+='<soapenv:Header/><soapenv:Body>';
-                soap+='<web:viewReportById>';
-                soap+='<web:in0>'+temp+'</web:in0>';
-                soap+='</web:viewReportById>';
-                soap+=' </soapenv:Body></soapenv:Envelope>';
-            var data = "data-xml="+soap;
-            
-            $.hori.ajax({
-                "type":"post",
-                "url":url,
-                "data":data,
-                "success":function(res){
-                  res=res.replace(/\s\s/g,"</p><p>")
-                	var jsonObj=JSON.parse(res);
-                	document.getElementById("aa").innerHTML = jsonObj.reportdata.datatext;
-        		
-                },
-                "error":function(res){
-                    alert("error:" + res);
-                    $.hori.hideLoading();
-                }
-            });
-    }
-	
-	</script>
-	<style>
-	  p   {   text-indent:2em   }  
-	</style>
+	function loadSrwcChart() {
+		var url = $.hori.getconfig().appServerHost
+				+ "view/bi/loadJytsChart/accsyBiReport/services/reqBiReportData";
+		var temp = "$lt;?xml version='1.0' encoding='utf-8'?$gt;$lt;root$gt;$lt;reportdata$gt;$lt;reportid$gt;1$lt;/reportid$gt;$lt;/reportdata$gt;$lt;/root$gt;";
+		var soap = "<soapenv:Envelope xmlns:soapenv='http://schemas.xmlsoap.org/soap/envelope/' xmlns:web='http://webservice.biz.digiwin.com'>";
+		soap += '<soapenv:Header/><soapenv:Body>';
+		soap += '<web:viewReportById>';
+		soap += '<web:in0>' + temp + '</web:in0>';
+		soap += '</web:viewReportById>';
+		soap += ' </soapenv:Body></soapenv:Envelope>';
+		var data = "data-xml=" + soap;
+
+		$.hori
+				.ajax({
+					"type" : "post",
+					"url" : url,
+					"data" : data,
+					"success" : function(res) {
+						res = res.replace(/\s\s/g, "</p><p>");
+						console.log(res);
+						var jsonObj = JSON.parse(res);
+						document.getElementById("aa").innerHTML = jsonObj.reportdata.datatext;
+
+					},
+					"error" : function(res) {
+						alert("error:" + res);
+						$.hori.hideLoading();
+					}
+				});
+	}
+</script>
+<style>
+p {
+	text-indent: 2em
+}
+</style>
 </head>
-<body >
+<body>
 	<!-- 经营态势 -->
-	<div data-role="page" id="srwc" class="login" >
-		<div data-role="content" align="left" id="aa" style="margin-left: 20px;" >
-		</div>
-			</div>
+	<div data-role="page" id="srwc" class="login">
+		<div data-role="content" align="left" id="aa"
+			style="margin-left: 20px;"></div>
+	</div>
 </body>
 </html>
