--- a/html/login.html
+++ b/html/login.html
@@ -137,12 +137,12 @@
 
 								}else{
 									$.hori.hideLoading();
-									alert(json.msg);
+									alert(json.msg+"22");
 								}
 
 						},
 						"error":function(res){
-							alert(res);
+							alert(res+"44");
 							$.hori.hideLoading();
 						}
 					})
